--- a/libs/cl_base/ui/feature/src/lib/ui/ui.component.html
+++ b/libs/cl_base/ui/feature/src/lib/ui/ui.component.html
@@ -1,10 +1,10 @@
 <nav>
   <ul>
     <li *ngFor="let menu of menuItems">
-      <a [routerLink]="menu.route">{{ menu.name }}</a>
+      <a [routerLink]="menu.path">{{ menu.name }}</a>
       <ul *ngIf="menu.children">
         <li *ngFor="let child of menu.children">
-          <a [routerLink]="child.route">{{ child.name }}</a>
+          <a [routerLink]="child.path">{{ child.name }}</a>
         </li>
       </ul>
     </li>
